[package]
name = "tess"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-poly = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-std = { version = "0.5", features = ["print-trace"], optional = true }
blstrs = "0.7"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
blake3 = "1.5"
rayon = { version = "1.10", optional = false }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["blst"]
blst = []
arkworks_base = ["ark-ec", "ark-ff", "ark-poly", "ark-serialize", "ark-std"]
ark_bls12381 = ["arkworks_base", "ark-bls12-381"]
ark_bn254 = ["arkworks_base", "ark-bn254"]

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "msm"
harness = false
